# Simple-Vulkan-Rendering-Engine

./: .clang_complete  .dcignore  .gitignore  .gitmodules  README.md  main.cpp  meson.build  suzanne.gltf  suzanne_simple.gltf  test.frag.glsl  test.vert.glsl  vertex.h
engine/: common.cpp  common.hpp  defs.hpp  meson.build  monitor.cpp  monitor.hpp  window.cpp  window.hpp
engine/math/: math.hpp  random.hpp  transform.cpp  transform.hpp
engine/resource/: material.cpp  material.hpp  mesh.cpp  mesh.hpp  resource.hpp
engine/resource/backend/: resource.cpp  resource.hpp  resourceManager.hpp
engine/util/: repeat.h  string.hpp  string_view.hpp  timer.h  vulkan.hpp
engine/vulkan/: common.cpp  common.hpp  renderState.cpp  renderState.hpp  shader.cpp  shader.hpp  state.cpp  state.hpp
