engine_sources = [
  'vulkan/common.cpp',
  'vulkan/shader.cpp',
  'vulkan/state.cpp',
  'common.cpp',
  'window.cpp',
  'monitor.cpp',
  'resource/mesh.cpp',
  'resource/material.cpp'

]


engine = static_library('dengine',
	sources: engine_sources,
	dependencies: engine_dependancies,
  include_directories: engine_inc)
